Bug 420192 - New to-do button failure
Summary: New to-do button failure
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: David Faure
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2020-04-17 10:24 UTC by SrKeiko
Modified: 2020-04-17 12:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description SrKeiko 2020-04-17 10:24:58 UTC
Application: kontact (5.14.40 (20.07.40))

Qt Version: 5.14.1
Frameworks Version: 5.70.0
Operating System: Linux 5.3.0-46-generic x86_64
Windowing system: X11
Distribution: KDE neon Unstable Edition

-- Information about the crash:
- What I was doing when the application crashed:
see emails	
- Unusual behavior I noticed:
In "Actions / New pending task" it has not failed me

Sorry for my english...

The crash can be reproduced sometimes.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault

[KCrash Handler]
#4  0x00007fd66dc3e640 in Akonadi::IncidenceChanger::entityTreeModel() const (this=this@entry=0x0) at ./src/incidencechanger.cpp:1138
#5  0x00007fd641b85f40 in IncidenceEditorNG::IncidenceDialogPrivate::IncidenceDialogPrivate(Akonadi::IncidenceChanger*, IncidenceEditorNG::IncidenceDialog*) (this=0x55eeafe9b910, changer=0x0, qq=0x55eeb482bc20) at ./src/incidencedialog.cpp:132
#6  0x00007fd641b8ac58 in IncidenceEditorNG::IncidenceDialog::IncidenceDialog(Akonadi::IncidenceChanger*, QWidget*, QFlags<Qt::WindowType>) (this=0x55eeb482bc20, changer=0x0, parent=<optimized out>, flags=...) at ./src/incidencedialog.cpp:694
#7  0x00007fd641b84876 in IncidenceEditorNG::IncidenceDialogFactory::create(bool, KCalendarCore::IncidenceBase::IncidenceType, Akonadi::IncidenceChanger*, QWidget*, QFlags<Qt::WindowType>) (needsSaving=needsSaving@entry=true, type=type@entry=KCalendarCore::IncidenceBase::TypeTodo, changer=changer@entry=0x0, parent=parent@entry=0x7fd6c000d940, flags=flags@entry=...) at ./src/incidencedialogfactory.cpp:40
#8  0x00007fd641b84a6b in IncidenceEditorNG::IncidenceDialogFactory::createTodoEditor(QString const&, QString const&, QStringList const&, QStringList const&, QStringList const&, QStringList const&, bool, Akonadi::Collection const&, bool, QWidget*, QFlags<Qt::WindowType>) (summary=..., description=..., attachments=..., attendees=..., attachmentMimetypes=..., attachmentLabels=..., inlineAttachment=<optimized out>, defaultCollection=..., cleanupAttachmentTempFiles=<optimized out>, parent=<optimized out>, flags=...) at ./src/incidencedialogfactory.cpp:75
#9  0x00007fd62a27e459 in CalendarView::newTodo(QString const&, QString const&, QStringList const&, QStringList const&, QStringList const&, bool) (this=<optimized out>, summary=..., description=..., attachments=..., attendees=..., attachmentMimetypes=..., inlineAttachment=false) at ./src/calendarview.cpp:1086
#10 0x00007fd62a24ed7b in ActionManager::openTodoEditor(QString const&) (this=<optimized out>, text=...) at ./src/actionmanager.cpp:1615
#11 0x00007fd62a2c856d in KOrgCalendarAdaptor::openTodoEditor(QString const&) (text=..., this=0x55eeb45c54a0) at ./obj-x86_64-linux-gnu/src/calendaradaptor.cpp:123
#12 0x00007fd62a2c856d in KOrgCalendarAdaptor::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_o=_o@entry=0x55eeb45c54a0, _id=_id@entry=14, _a=_a@entry=0x7fff8a42dbf0, _c=QMetaObject::InvokeMetaMethod) at ./obj-x86_64-linux-gnu/src/calendaradaptor.moc:219
#13 0x00007fd62a2c87e3 in KOrgCalendarAdaptor::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_a=0x7fff8a42dbf0, _id=14, _c=QMetaObject::InvokeMetaMethod, _o=0x55eeb45c54a0) at ./obj-x86_64-linux-gnu/src/calendaradaptor.moc:258
#14 0x00007fd62a2c87e3 in KOrgCalendarAdaptor::qt_metacall(QMetaObject::Call, int, void**) (this=0x55eeb45c54a0, _c=QMetaObject::InvokeMetaMethod, _id=14, _a=0x7fff8a42dbf0) at ./obj-x86_64-linux-gnu/src/calendaradaptor.moc:259
#15 0x00007fd6f2c0e5b8 in QDBusConnectionPrivate::deliverCall(QObject*, int, QDBusMessage const&, QVector<int> const&, int) (this=this@entry=0x7fd6b0003210, object=object@entry=0x55eeb45c54a0, msg=..., metaTypes=..., slotIdx=<optimized out>) at qdbusintegrator.cpp:1001
#16 0x00007fd6f2c134b0 in QDBusConnectionPrivate::activateCall(QObject*, int, QDBusMessage const&) (this=this@entry=0x7fd6b0003210, object=0x55eeb45c54a0, flags=flags@entry=273, msg=...) at qdbusintegrator.cpp:904
#17 0x00007fd6f2c13e2c in QDBusConnectionPrivate::activateCall(QObject*, int, QDBusMessage const&) (msg=..., flags=273, object=<optimized out>, this=0x7fd6b0003210) at qdbusintegrator.cpp:853
#18 0x00007fd6f2c13e2c in QDBusConnectionPrivate::activateObject(QDBusConnectionPrivate::ObjectTreeNode&, QDBusMessage const&, int) (this=0x7fd6b0003210, node=..., msg=..., pathStartPos=<optimized out>) at qdbusintegrator.cpp:1486
#19 0x00007fd6f2c1468c in QDBusConnectionPrivate::handleObjectCall(QDBusMessage const&) (this=this@entry=0x7fd6b0003210, msg=...) at qdbusintegrator.cpp:1585
#20 0x00007fd6f2c1476c in QDBusConnectionPrivate::handleMessage(QDBusMessage const&) (this=0x7fd6b0003210, amsg=...) at qdbusintegrator.cpp:579
#21 0x00007fd6f2c15099 in QDBusConnectionPrivate::sendWithReplyLocal(QDBusMessage const&) (this=this@entry=0x7fd6b0003210, message=...) at qdbusintegrator.cpp:2080
#22 0x00007fd6f2c158b7 in QDBusConnectionPrivate::sendWithReplyAsync(QDBusMessage const&, QObject*, char const*, char const*, int) (this=0x7fd6b0003210, message=..., receiver=receiver@entry=0x0, returnMethod=returnMethod@entry=0x0, errorMethod=errorMethod@entry=0x0, timeout=-1) at qdbusintegrator.cpp:2116
#23 0x00007fd6f2c04218 in QDBusConnection::asyncCall(QDBusMessage const&, int) const (this=this@entry=0x55eeb46f6488, message=..., timeout=<optimized out>) at qdbusconnection.cpp:711
#24 0x00007fd6f2c1eb7f in QDBusAbstractInterface::asyncCallWithArgumentList(QString const&, QList<QVariant> const&) (this=<optimized out>, method=..., args=...) at qdbusabstractinterface.cpp:527
#25 0x00007fd66e183cf6 in OrgKdeKorganizerCalendarInterface::openTodoEditor(QString const&) (text=..., this=<optimized out>) at ./obj-x86_64-linux-gnu/src/kontactplugin/korganizer/calendarinterface.h:141
#26 0x00007fd66e183cf6 in TodoPlugin::slotNewTodo() (this=<optimized out>) at ./src/kontactplugin/korganizer/todoplugin.cpp:137
#27 0x00007fd6f4505fe7 in QtPrivate::QSlotObjectBase::call(QObject*, void**) (a=0x7fff8a42e460, r=0x55eeaf9b5740, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:394
#28 0x00007fd6f4505fe7 in doActivate<false>(QObject*, int, void**) (sender=0x55eeafa11eb0, signal_index=4, argv=0x7fff8a42e460) at kernel/qobject.cpp:3870
#29 0x00007fd6f45008a2 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (sender=sender@entry=0x55eeafa11eb0, m=m@entry=0x7fd6f5a95340 <QAction::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7fff8a42e460) at kernel/qobject.cpp:3930
#30 0x00007fd6f53ae3a2 in QAction::triggered(bool) (this=this@entry=0x55eeafa11eb0, _t1=<optimized out>) at .moc/moc_qaction.cpp:381
#31 0x00007fd6f53b0a0c in QAction::activate(QAction::ActionEvent) (this=0x55eeafa11eb0, event=<optimized out>) at kernel/qaction.cpp:1161
#32 0x00007fd6f6bde054 in QAction::trigger() (this=<optimized out>) at /usr/include/x86_64-linux-gnu/qt5/QtWidgets/qaction.h:187
#33 0x00007fd6f6bde054 in Kontact::MainWindow::slotNewClicked() (this=<optimized out>) at ./src/mainwindow.cpp:556
#34 0x00007fd6f4505fe7 in QtPrivate::QSlotObjectBase::call(QObject*, void**) (a=0x7fff8a42e5f0, r=0x55eeaf71df70, this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:394
#35 0x00007fd6f4505fe7 in doActivate<false>(QObject*, int, void**) (sender=0x55eeaf8f42b0, signal_index=4, argv=0x7fff8a42e5f0) at kernel/qobject.cpp:3870
#36 0x00007fd6f45008a2 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (sender=sender@entry=0x55eeaf8f42b0, m=m@entry=0x7fd6f5a95340 <QAction::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7fff8a42e5f0) at kernel/qobject.cpp:3930
#37 0x00007fd6f53ae3a2 in QAction::triggered(bool) (this=this@entry=0x55eeaf8f42b0, _t1=<optimized out>) at .moc/moc_qaction.cpp:381
#38 0x00007fd6f53b0a0c in QAction::activate(QAction::ActionEvent) (this=0x55eeaf8f42b0, event=<optimized out>) at kernel/qaction.cpp:1161
#39 0x00007fd6f54a1adb in QAbstractButtonPrivate::click() (this=0x55eeaf9ab2c0) at widgets/qabstractbutton.cpp:398
#40 0x00007fd6f54a1d3d in QAbstractButton::mouseReleaseEvent(QMouseEvent*) (this=0x55eeaf9ab280, e=0x7fff8a42eb80) at widgets/qabstractbutton.cpp:1012
#41 0x00007fd6f55937aa in QToolButton::mouseReleaseEvent(QMouseEvent*) (this=<optimized out>, e=<optimized out>) at widgets/qtoolbutton.cpp:622
#42 0x00007fd6f53f57f8 in QWidget::event(QEvent*) (this=0x55eeaf9ab280, event=0x7fff8a42eb80) at kernel/qwidget.cpp:9031
#43 0x00007fd6f54a2f0b in QAbstractButton::event(QEvent*) (this=this@entry=0x55eeaf9ab280, e=e@entry=0x7fff8a42eb80) at widgets/qabstractbutton.cpp:969
#44 0x00007fd6f5593844 in QToolButton::event(QEvent*) (this=0x55eeaf9ab280, event=0x7fff8a42eb80) at widgets/qtoolbutton.cpp:1002
#45 0x00007fd6f53b48bc in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=this@entry=0x55eeaf364e00, receiver=receiver@entry=0x55eeaf9ab280, e=e@entry=0x7fff8a42eb80) at kernel/qapplication.cpp:3684
#46 0x00007fd6f53bc908 in QApplication::notify(QObject*, QEvent*) (this=<optimized out>, receiver=0x55eeaf9ab280, e=0x7fff8a42eb80) at kernel/qapplication.cpp:3128
#47 0x00007fd6f44cadb8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x55eeaf9ab280, event=0x7fff8a42eb80) at kernel/qcoreapplication.cpp:1092
#48 0x00007fd6f44caf9e in QCoreApplication::sendSpontaneousEvent(QObject*, QEvent*) (receiver=receiver@entry=0x55eeaf9ab280, event=event@entry=0x7fff8a42eb80) at kernel/qcoreapplication.cpp:1499
#49 0x00007fd6f53baf8f in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) (receiver=receiver@entry=0x55eeaf9ab280, event=event@entry=0x7fff8a42eb80, alienWidget=0x55eeaf9ab280, nativeWidget=0x55eeaf9a7060, buttonDown=buttonDown@entry=0x7fd6f5ac4980 <qt_button_down>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at kernel/qapplication.cpp:2614
#50 0x00007fd6f540feb1 in QWidgetWindow::handleMouseEvent(QMouseEvent*) (this=this@entry=0x55eeafaa20b0, event=event@entry=0x7fff8a42f000) at kernel/qwidgetwindow.cpp:673
#51 0x00007fd6f5412d1a in QWidgetWindow::event(QEvent*) (this=0x55eeafaa20b0, event=0x7fff8a42f000) at kernel/qwidgetwindow.cpp:295
#52 0x00007fd6f53b48bc in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=this@entry=0x55eeaf364e00, receiver=receiver@entry=0x55eeafaa20b0, e=e@entry=0x7fff8a42f000) at kernel/qapplication.cpp:3684
#53 0x00007fd6f53bbac0 in QApplication::notify(QObject*, QEvent*) (this=0x7fff8a42f4d0, receiver=0x55eeafaa20b0, e=0x7fff8a42f000) at kernel/qapplication.cpp:3430
#54 0x00007fd6f44cadb8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x55eeafaa20b0, event=0x7fff8a42f000) at kernel/qcoreapplication.cpp:1092
#55 0x00007fd6f44caf9e in QCoreApplication::sendSpontaneousEvent(QObject*, QEvent*) (receiver=receiver@entry=0x55eeafaa20b0, event=event@entry=0x7fff8a42f000) at kernel/qcoreapplication.cpp:1499
#56 0x00007fd6f4ac6f95 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) (e=0x55eeafe9b090) at kernel/qguiapplication.cpp:2209
#57 0x00007fd6f4ac80c5 in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) (e=e@entry=0x55eeafe9b090) at kernel/qguiapplication.cpp:1941
#58 0x00007fd6f4aa101b in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) (flags=flags@entry=...) at kernel/qwindowsysteminterface.cpp:1163
#59 0x00007fd6c8bf3c8a in xcbSourceDispatch(GSource*, GSourceFunc, gpointer) (source=<optimized out>) at qxcbeventdispatcher.cpp:105
#60 0x00007fd6ed61b417 in g_main_context_dispatch () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#61 0x00007fd6ed61b650 in  () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#62 0x00007fd6ed61b6dc in g_main_context_iteration () at /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#63 0x00007fd6f452a0bc in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x55eeaf3b1f30, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#64 0x00007fd6f44c963a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7fff8a42f3a0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:225
#65 0x00007fd6f44d2db0 in QCoreApplication::exec() () at kernel/qcoreapplication.cpp:1400
#66 0x000055eeadce1465 in main(int, char**) (argc=<optimized out>, argv=<optimized out>) at ./src/main.cpp:229

The reporter indicates this bug may be a duplicate of or related to bug 388019.

Possible duplicates by query: bug 388019, bug 361840, bug 361586, bug 354729.

Reported using DrKonqi
Comment 1 David Faure 2020-04-17 12:30:36 UTC
Git commit c33218c62fcc1ec5cfa74e3929c3c976a9a87268 by David Faure.
Committed on 17/04/2020 at 12:29.
Pushed by dfaure into branch 'master'.

Fix crash on 'New Todo' in kontact.

'changer' can actually be null here.

Just skip the optimization (i.e. let the combo create its own
EntityTreeModel) in that case.

M  +1    -1    src/incidencedialog.cpp

https://commits.kde.org/incidenceeditor/c33218c62fcc1ec5cfa74e3929c3c976a9a87268