Fix crash on 'New Todo' in kontact.

'changer' can actually be null here.

Just skip the optimization (i.e. let the combo create its own
EntityTreeModel) in that case.

BUG: 420192